--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     </style>
 </head>
 <body>
-    <div class="center-text">no</div>
+    <div class="center-text">no</div><br>
+        
+            <a href="https://bsky.app/profile/mackavaili.com"><img scr="bluesky.png" width="500" height="600" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
+            <a href="https://mastodon.social/@mackavaili"><img scr="mastodon-social.png" width="500" height="600" alt="Blue Sky (bsky.app)"></a>
+        
+    </div>
 </body>
 </html>
-
