--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         // Initial call and update every second
         updateTime();
         setInterval(updateTime, 1000);
-    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="./mackavaili.github.io/refs/heads/main/bluesky.png" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
-        <a href="https://mastodon.social/@mackavaili"><img scr="https://raw.githubusercontent.com/mackavaili/mackavaili.github.io/refs/heads/main/mastodon-social.png" alt="Mastodon (mastodon.social)"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
+    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="/mackavaili.github.io/assets/bluesky.png" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
+        <a href="https://mastodon.social/@mackavaili"><img scr="/mackavaili.github.io/assets/mastodon-social.png" alt="Mastodon (mastodon.social)"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
 </body>
 </html>
