--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mackavaili v.01</title>
+    <title>mackavaili v.02</title>
     <style>
         /* Ensure page scales to fit any screen resolution */
         body, html {
@@ -76,7 +76,7 @@
         // Initial call and update every second
         updateTime();
         setInterval(updateTime, 1000);
-    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="/mackavaili.github.io/assets/bluesky.png" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
-        <a href="https://mastodon.social/@mackavaili"><img scr="/mackavaili.github.io/assets/mastodon-social.png" alt="Mastodon (mastodon.social)"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
+    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="https://mackavaili.com/img/bluesky.png" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
+        <a href="https://mastodon.social/@mackavaili"><img scr="https://mackavaili.com/img/mastodon-social.png" alt="Mastodon (mastodon.social)"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
 </body>
 </html>
