--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         // Initial call and update every second
         updateTime();
         setInterval(updateTime, 1000);
-    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="https://mackavaili.com/img/bluesky.png" alt="Blue Sky (bsky.app)"></a>&nbsp;&nbsp;
-        <a href="https://mastodon.social/@mackavaili"><img scr="https://mackavaili.com/img/mastodon-social.png" alt="Mastodon (mastodon.social)"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
+    </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="https://mackavaili.github.io/img/bluesky.png" alt="Blue Sky"></a>&nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="https://mastodon.social/@mackavaili"><img scr="https://mackavaili.github.io/img/mastodon-social.png" alt="Mastodon"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
 </body>
 </html>
