--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mackavaili v.03</title>
+    <title>mackavaili v.04</title>
     <style>
         /* Ensure page scales to fit any screen resolution */
         body, html {
@@ -77,6 +77,6 @@
         updateTime();
         setInterval(updateTime, 1000);
     </script><div><a href="https://bsky.app/profile/mackavaili.com"><img scr="https://mackavaili.github.io/img/bluesky.png" alt="Blue Sky"></a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="https://mastodon.social/@mackavaili"><img scr="https://mackavaili.github.io/img/mastodon-social.png" alt="Mastodon"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
+        <a href="https://mastodon.social/@mackavaili"><img scr="https://wiki.selfhtml.org/images/thumb/3/36/Mastodon_logo.svg/65px-Mastodon_logo.svg.png" alt="Mastodon"></a><a rel="me" href="https://mastodon.social/@mackavaili"></a><br><br></div>
 </body>
 </html>
