--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #212121; /* Updated background color */
-            color: #dadada; /* Updated font color */
+            background-color: ##ffffff; /* Updated background color */
+            color: ##313130; /* Updated font color */
         }
 
         /* Center "no" text */
