--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
 
         /* Center "no" text */
         .center-text {
-            font-size: 20vw; /* Doubled font size */
+            font-size: 10vw; /* Doubled font size */
             font-weight: bold;
             text-transform: lowercase;
         }
     </style>
 </head>
 <body>
-    <div class="center-text">no</div>
+    <div class="center-text">Voilà!
+In View, a humble Vaudevillian Veteran, cast Vicariously as both Victim and Villain by the Vicissitudes of fate.
+This Visage, no mere Veneer of Vanity, is a Vestige of the Vox populi, now Vacant, Vanished.
+However, this Valorous Visitation of a bygone Vexation stands Vivified, and has Vowed to Vanquish these Venal and Virulent Vermin Vanguarding Vice and Vouchsafing the Violently Vicious and Voracious Violation of Volition.
+
+The only Verdict is Vengeance;
+a Vendetta held as a Votive, not in Vain, for the Value and Veracity of such shall one day Vindicate the Vigilant and the Virtuous.
+
+Verily, this Vichyssoise of Verbiage Veers most Verbose, so let me simply add that it's my very good honor to meet you and you may call me
+mackavaili</div>
 </body>
 </html>
