--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ add that it's my very good honor to meet you and you may call me
         </div>
         <div class="row my-2">
             <div class="col-md-4 mx-auto text-muted text-center small-xl">
-                &copy; 2024-25 mackavaili - All Rights Reserved<br>
-                We are fire creatures from an ice age. - S. Pine
+                &copyWe are fire creatures from an ice age. - S. Pine
             </div>
         </div>
     </div>
