--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ add that it's my very good honor to meet you and you may call me
         </div>
         <div class="row my-2">
             <div class="col-md-4 mx-auto text-muted text-center small-xl">
-                &copyWe are fire creatures from an ice age. - S. Pine
+                We are fire creatures from an ice age.
             </div>
         </div>
     </div>
